Added some glossary entries

--- a/modfive.tex
+++ b/modfive.tex
@@ -310,11 +310,35 @@ This is our segue into the next topic of this module, which is the problem of ev
 
 \chapter{Part 11: An Argument Against the Existence of God}
 
-The Problem of Evil, which I abbreviate as POE, is the family of arguments against the existence of God which we will be discussing. This is one of those arguments where what doesn't kill it makes it stronger. As a result, there are many different versions of it, each with their own special objection (explanations for how God can exist despite the argument). The objections to the arguments for the existence of God were not arguments against the existence of God, rather they are ways that the argument for the existence of God is flawed. You do not want flawed arguments. For this class, we will deal with, in general, two kinds of POE, which are separated by the kind of evil they use. 
+The \gls{Problem of Evil}, which I abbreviate as POE, is the family of arguments against the existence of God which we will be discussing. This is one of those arguments where what doesn't kill it makes it stronger. As a result, there are many different versions of it, each with their own special objection (explanations for how God can exist despite the argument). The objections to the arguments for the existence of God were not arguments against the existence of God, rather they are ways that the argument for the existence of God is flawed. You do not want flawed arguments. For this class, we will deal with, in general, two kinds of POE, which are separated by the kind of evil they use. 
 
-First, we have what I'll call Man-Made Evil. These are also sometimes called 'moral evils'. Man-made evils are the sufferings which people cause, the 'bad' things we do. Do not get hung up on the use of the word 'evil'. We will see later why good and evil aren't relative or cultural, but evil, in either case, here concerns suffering, which is not a man-made concept. Man-made evils are things like torture, murder, famine (yes, famines are man-made), and so on. 
+\newglossaryentry{Problem of Evil}
+{
+name=Problem of Evil,
+description={An argument against the existence of God which points to the pain and suffering on the Earth and asks how an all-knowing, all-powerful, and all-good god could allow for such a thing},
+plural=Problems of Evil
+}
 
-Second, we have Natural Evil. This is the kind of suffering which is not caused by man, but nature doing its thing. Since we are talking about suffering when we use the term 'evil', it should be clear that natural evils are a thing, because there are some sufferings caused by nature doing as it does. Here we have things like earthquakes, disease, volcanic eruptions, tornado, and sharknados. 
+
+First, we have what I'll call \gls{man-made evil}. These are also sometimes called 'moral evils'. Man-made evils are the sufferings which people cause, the 'bad' things we do. Do not get hung up on the use of the word 'evil'. We will see later why good and evil aren't relative or cultural, but evil, in either case, here concerns suffering, which is not a man-made concept. Man-made evils are things like torture, murder, famine (yes, famines are man-made), and so on. 
+
+\newglossaryentry{man-made evil}
+{
+name=man-made evil,
+description={The pain and suffering and otherwise `bad' things which human persons do through free will},
+plural=man-made evils
+}
+
+
+Second, we have\gls{natural evil}. This is the kind of suffering which is not caused by man, but nature doing its thing. Since we are talking about suffering when we use the term 'evil', it should be clear that natural evils are a thing, because there are some sufferings caused by nature doing as it does. Here we have things like earthquakes, disease, volcanic eruptions, tornado, and sharknados. 
+
+\newglossaryentry{natural evil}
+{
+name=natural evil,
+description={The pain and suffering and otherwise `bad' thingswhich are caused by natural processes of the world, not caused by human free action},
+plural=natural evils
+}
+
 
 The stronger of the two, for our purposes, concerns natural evils, because moral evils can be easily explained as not God's doing, but man's. But, unless I specify otherwise, when I just use the term ‘evil’ or ‘evils’, I am referring to the set of both. That being said, here is the Problem of Evil Argument:
 \begin{enumerate}
