--- a/modseven.tex
+++ b/modseven.tex
@@ -7,7 +7,7 @@
 
 You might have heard the term ‘meta’ before. For example, when I was in undergrad, I was explaining my Epistemology course to some friends, saying something like “it’s the study of knowledge, we are learning about knowledge”, and one person in the group said “that’s so meta!”. The term ‘meta’ comes from Greek, meaning ‘over’, and has there a similar sense to our prefix ‘trans-’ (as in ‘translate’ or ‘transfer’), which comes from Latin and has the same sense as the Greek. In English, also, there are two senses of ‘over’, the first means ‘across’, like to carry something over to another, and the second means ‘above’, as in to put something above another. ‘Meta-’ and ‘trans-’ differ in the same way. With very few exceptions (‘metaphor’, which comes from the Greek for ‘carry over’), the prefix ‘meta-’ means that you are doing something above, over, the area in question and the prefix ‘trans-’ means that you are doing something across, over, certain boundaries. In the case of 'translate', this comes from the Latin verb 'transfero', meaning "I carry over", that verb is also where we get the English verb 'transfer'.
 
-More explicitly, when ‘meta-’ is attached to a field of study, it refers to a field of study one step more abstract than it. One way to think about this is that I am now asking questions about the questions in the field. This is not just true for fields in philosophy, though once the level gets high enough, it becomes an area of philosophy, but it’s also true for any science or subject you pick. Here is a table of some examples:
+More explicitly, when \gls{meta-} is attached to a field of study, it refers to a field of study one step more abstract than it. One way to think about this is that I am now asking questions about the questions in the field. This is not just true for fields in philosophy, though once the level gets high enough, it becomes an area of philosophy, but it’s also true for any science or subject you pick. Here is a table of some examples:
 \begin{tabular}{p{0.75in}|p{1in}|p{0.9in}|p{1in}}
 Subject&Questions &Meta-Subject&Meta-Questions\\\hline
 Biology&Concerning living organisms&Metabiology&What exactly is living? 
@@ -23,19 +23,55 @@ Linguistics&Concerning language, meaning, and structure in humans&Metalinguistic
 How do words pick out things? \\
 \end{tabular}
 
+\newglossaryentry{meta-}
+{
+  name=meta-,
+  description={a prefix which changes the level of abstraction for the questions in the field, namely by moving it up. This means, roughly, `asking questions about the questions in...'}
+}
+
+
 When you ‘go meta’, you are taking yourself out of the sphere of the field and starting to ask questions about the very nature of it. Due to the nature of philosophy and philosophers in general, we are far more inclined to go meta on a topic. So, for any field in philosophy, there’s likely a well-trotted path for the various meta-questions and sometimes a well-trotted path for the meta-meta-questions.
 
-The various stances which can be generated once you choose to go meta on a topic tend to fall into nice, neat, easy to classify packets. The first level has two different kinds of stances, Realism and Anti-Realism (sometimes called Nihilism, which is what I prefer). Realism claims that the facts about the subject are real, hence the name, while the Anti-Realist claims that they aren't real. And then, depending on what the stance says about various meta-level questions, they are further subdivided. In the Realist side, there are two general stances which get our attention, Relativism and Objectivism.
+The various stances which can be generated once you choose to go meta on a topic tend to fall into nice, neat, easy to classify packets. The first level has two different kinds of stances, \Gls{realism} and Anti-Realism (sometimes called \Gls{nihilism}, which is what I prefer). Realism claims that the facts about the subject are real, hence the name, while the Anti-Realist claims that they aren't real. And then, depending on what the stance says about various meta-level questions, they are further subdivided. In the Realist side, there are two general stances which get our attention, Relativism and Objectivism.
+
+\newglossaryentry{realism}
+{
+  name=realism,
+  description={The stance that there are facts in a given topic. In other words, the stance that the facts are `real'}
+}
+
+\newglossaryentry{nihilism}
+{
+  name=nihilism,
+  description={The stance that there are no facts in a given topic. In other words, the stance that the facts aren't `real', there is nothing true or accurate to be said about it. The name for this stance comes from the Latin word `nihil' meaning `nothing'}
+}
+
 
 There are different kinds of Relativisms and Objectivisms (the typical subdivisions of Realism) out there, and those tend to be more particular to the field and there may be different kinds of Nihilisms aside from Error Theory and Expressivism, but those go well beyond the scope of this class. Towards the end of this module, I will explain those stances in the Nihilism branch for Meta-Ethics in more detail.
 
 \section{The Start of Moral Relativism}
 
-Moral Relativism is a part of a family of stances, all of which say that the truth of something, or everything, is relative. What is relative or to what it is relative all depends on the stance. This sort of idea is found in several areas of philosophy and the notion (applied differently) is found in physics. This, in its broad sense, is the stance that there is no absolute truth (objective truth), but rather the truth about things varies from person to person or from culture to culture, depending on the version of relativism which is held.
-
-Moral Relativism is a limited form of relativism. It does come in two flavors, Moral Individual Relativism (what is moral is relative to the doer, and there is no way for another person to say that what they did is/was morally wrong) and Moral Cultural Relativism (what is moral is relative to the culture and there is no way of saying that they are wrong from an outsider's perspective). One can also say that Moral Relativism is the stance that there is no objective basis for claiming that a particular action, or a class of actions is right or wrong, permissible or impermissible. Or, that there is no fact of the matter regarding whether actions are right or wrong. Whether something is, in fact, right or wrong is relative to the culture or to the person. Some classic examples of this are killing babies, cannibalism, and funeral rights.
+Moral Relativism is a part of a family of stances, all of which say that the truth of something, or everything, is relative (generally called \Gls{relativism}). What is relative or to what it is relative all depends on the stance. This sort of idea is found in several areas of philosophy and the notion (applied differently) is found in physics. This, in its broad sense, is the stance that there is no absolute truth (objective truth), but rather the truth about things varies from person to person or from culture to culture, depending on the version of relativism which is held.
 
 Relativism comes in many different flavors. The first is that everything is relative, this is global relativism. The other is that only certain things are relative, this is limited relativism. From this, we have to ask what are they relative to? These are either to your culture or to you individually.
+
+\newglossaryentry{relativism}
+{
+  name=relativism,
+  description={The stance that there are facts in a given topic but those facts are variable, they change according to the culture, context, or individual. In philosophy, generally, the facts change according to either what the individual believes or the culture in question believes, depending on the form of relativism held}
+}
+
+
+\glspl{moral relativism} is a limited form of relativism. It does come in two flavors, Moral Individual Relativism (what is moral is relative to the doer, and there is no way for another person to say that what they did is/was morally wrong) and Moral Cultural Relativism (what is moral is relative to the culture and there is no way of saying that they are wrong from an outsider's perspective). One can also say that Moral Relativism is the stance that there is no objective basis for claiming that a particular action, or a class of actions is right or wrong, permissible or impermissible. Or, that there is no fact of the matter regarding whether actions are right or wrong. Whether something is, in fact, right or wrong is relative to the culture or to the person. Some classic examples of this are killing babies, cannibalism, and funeral rights.
+
+\newglossaryentry{moral relativism}
+{
+  name=moral relativism,
+  description={The stance that there are facts about morality, that is there are standards of right and wrong, but those facts are variable, they change according to the beliefs of culture or individual in question (which depends on the form of Moral Relativism claimed to be true)}
+plural=Moral Relativism
+}
+
+
 \section{The Cultural Difference Argument}
 Often, people argue for moral relativism by pointing to examples, it is often claimed that due to the differences in moral beliefs, there must not be an objective, absolute morality. If you remember from my charts, the moral relativism still holds that there are moral truths, but those truths are relative to the culture. Cultural Moral Relativism is by far the most common stance found in popular culture, so that's the one we will point to, but individual moral relativism has similar problems as well as others unique to it. Here is a classical example used to argue for Cultural Moral Relativism:
 
@@ -45,11 +81,12 @@ From this, we can see that two cultures, when the encountered the customs of the
 
     \factoidbox{In some Inuit cultures, there is a common practice know as ‘the dip’ (my translation). When a child is born in the dead of winter, it is common for the mother to carve out a hole in the ice and place the child in the water. This kills the child instantly (infanticide). This is done purely at the parents’ discretion and there is no negative stigma about it. Old people also, when they became too feeble to contribute to the family, were left out in the snow to die.}
 
-The above example is used in the discussion for this module. The lesson from these two stories (the second of which I have seen it used as examples enough for me to think it's true) is that different cultures have different moral codes. What is seen as just fine in one culture is seen as horrifying in another. For a fictional case, take this example:
+The lesson from these two stories (the second of which I have seen it used as examples enough for me to think it's true) is that different cultures have different moral codes. What is seen as just fine in one culture is seen as horrifying in another. For a fictional case, take this example:
 
     \factoidbox{For most of the world, the elderly are treated with respect and cared for until their natural death. The Kaelon people are different. In this society, the prevailing view is that it's the duty of the 'elderly' to leave their tasks to the next generation, that forcing the next generation to care for the elderly is cruel,  and that having death come for a person  seemingly randomly is heartless. So, when a Kaelon turns 60 years old, they undergo the Resolution. In it, a great party is thrown, celebrating their life and accomplishments, and afterwards, the Kaelon commits suicide. Living past this point is seen as greedy, their time is up and their accomplishments after this point are seen as stolen from the next generation. This is expected of all Kaelons, refusing to kill yourself at the allotted time will cause even family members to be ashamed of you. If a Kaelon seeks asylum to avoid the Resolution, the Kaelons will declare war on the other culture in order to kill the person.\autocite{HalfaLife}}
 
 Many have looked at examples like this and have thought that there must not be an actual objective truth about morality, that it must merely be opinion, either held by a person or collectively as a group. This leads us to:
+
 \section{The Cultural Differences argument}
 
 These examples, and my not so subtle  hints, point to a very interesting argument. It seems, given how I have framed it, the most socially conscious stance would be one which puts all cultural customs on equal footing, to not have some objective measure which can be used to discriminate against a culture. So, using this observation, we get this argument:
@@ -60,6 +97,7 @@ These examples, and my not so subtle  hints, point to a very interesting argumen
 \end{tabular}
 
 But, does this show that the next module in this class is going to be gibberish? Well, no. Though there are some moral relativists out there in philosophy today, there are very few, and no philosopher (no really good philosopher) is a moral relativist because of this argument. There are many problems with it which are worth exploring. 
+
 \subsection{Problem 1: It isn't a good argument}
 
 For an argument to be good, philosophers have a pretty high standard. The conclusion needs to follow from the premises necessarily. There can be no case where the premises are true and the conclusion false (this is called ‘validity’). If an argument is not valid, then it is not sound. The first line of the argument concerns what people believe while the conclusion concerns what is actually the case. The issue with this sort of reasoning can be seen using a similar sort of method as the Limitation of the Conclusion problems in the arguments for the existence of God. If you think that The Cultural Differences Argument is accurate, then you will, by the same reasoning, need to think that these arguments are accurate: 
@@ -70,17 +108,21 @@ For an argument to be good, philosophers have a pretty high standard. The conclu
 \end{tabular}
 
 This argument follows the exact same reasoning as the cultural differences argument. If it works for one then it should work for the other. But, we can also look at the spirit of the argument, and attack that as well. 
+
 \subsection{Problem 2: Cultural Oppression}
 
 Though the argument may not be any good, all that shows is that the argument isn't good. It does not show that morality is objective. But, if we look at the last example I gave, involving the Kaelons, we see something interesting. If morality is relative to a culture, there's nothing stopping one culture, morally speaking, from oppressing people in their culture and oppressing people in other cultures. For example, if there are no objective moral facts, then there would be nothing wrong with the Kaelons declaring war on another culture for allowing someone to receive asylum. Similarly, there would be nothing wrong with the Kaelons forcing members of their culture to unwillingly commit suicide. This sort of case can be found in history as well, with the sear number of examples being too numerous to list. This is a problem which will appear again later in this class, because it's more obvious inside another argument.  
 
 \section{The Cultural Imperialism Argument}
+
 The Cultural Differences Argument is not the only argument in favor of Cultural Moral Relativism, there are several others. Most fall to the same sort of objections which we will see later, others have problems of their own. The Cultural Imperialism Argument is a little more advanced, claims to prove this sort of relativism, but it, equally, has issues.  Here is the introduction:
+
 \subsection{Cultural Imperialism}
 
 Throughout history, we have seen cases of one culture forcing beliefs and moral stances onto another. For example, we have the forced religious conversions of the Aztecs by the Spanish, we have the boarding schools which the US put Native American children in, and in China, we have the Uyghurs being put into 'reeducation camps' (this may still be happening, this is true as of 2018). All of these examples have/had the same purpose: changing the practices, religions, and moral ideologies of the people.  
 
 Cultural Imperialism is the reason for these behaviors, why cultures force themselves on others in this way (and sometimes in even more violent ways). Cultural Imperialism is the stance your culture as all of the right answers, morally speaking, your culture is perfect, and because of this, you are justified in forcing other cultures to change (typically to your own). But, looking at the number of examples from history, we can see that this imperialism is wrong, it should not be done. This can be seen both from an insider's and an outsider's perspective. Naturally, this perspective on Imperialism leads easily to Cultural Moral Relativism, because it seems never to be right to judge the values of one culture against the values of another. Put more formally, we get this argument:
+
 \subsubsection{The Cultural Imperialism Argument}
 
 \begin{enumerate}
@@ -96,7 +138,8 @@ Cultural Imperialism is the reason for these behaviors, why cultures force thems
 \end{enumerate}
 
 Now, despite my build-up and explanation for this, there is a major issue with this argument, both in the way it's constructed (though, technically valid) and the spirit behind it. For example, I can use this argument, exact same premises, to show that unicorns exist, 2+2=5, and anything else I could want. 
-The Problem
+
+\subsubsection{The Problem}
 
 As I mentioned above, I can use this argument, not the structure, but the argument itself, to prove that mermaids exist. Any argument with this capability will be valid, but it will not be sound, there will be a factual error in it somewhere. For this one, let's try and work out the factual error, and here it's fairly easy to spot (hint, look at the first line and the last line):
 \begin{tabular}{p{2in}|p{2in}}
@@ -135,6 +178,7 @@ These are the same, if presented right, they will get a laugh. But, will this jo
     An Iraqi woman who grew up in the 2000s believes that women are not equal to men. She claims that she’s glad about this because “if I grew up in the 60s and 70s, I would have believed that we were equal, and this is wrong.”}
 
 Something is very different here. If I tried to present these as a joke, even with the same tones and inflections, I would not get a laugh (and I don't, I have tried). But, what's the difference between these? What sort of things get a laugh and what sort of things don't? Well, the difference between these cases is seemingly unrelated, but it's the only one which works (they are related). The relative things, the things which are merely preference, those get a laugh when plugged into the joke, the things which aren't relative, the objective things, those don't get a laugh.  So, this test is basically if you get a laugh, it's relative, if you don't, then it's objective. The vast, vast majority of the time, we do not laugh about morality. So, we, at least at some level, think that morality is objective. 
+
 \subsection{The Second Test: The Disagreement Test}
 
 Often, in real life, we get into disagreements with people. Sometimes these are serious, like whether refugees should be allowed in the country or whether global warming is occurring. Other times they are just silly, like whether broccoli is yucky or whether dark chocolate is better than milk. The second test for relativism about a subject concerns the nature of such disagreements. For this test, you need to  imagine, or actually get into, a disagreement about something. Ask yourself what the disagreement feels like. For example, take these examples:
@@ -187,6 +231,7 @@ The steps to preform this test on yourself are pretty straight forward. First, t
 \section{Consequences of Taking Moral Relativism Seriously}
 
 So far, we have seen evidence that we don't actually think that moral relativism is correct and we have seen that the arguments for the stance aren't any good (it's possible that there are others, and likely are others, but they will all, likely, fall you the same issues). But, like with the arguments for the existence of God, an objection to the argument doesn't show that it's conclusion is false. There are some true or false things which just can't be proven one way or the other (for example, "the first digit of TREE(3) is 1" is either true or  false, but due to the size of the number, it's just impossible for us to prove one way or the other). Now, to actually disprove Cultural Moral Relativism we need to attack it head on, not just the supporting evidence. To do this, we will use a method which you might recognize from science (science got it from Philosophy). We will assume that relativism is true and show that it does not line up with the world, or that the consequences of it are so outlandish we can dismiss it easily. There are, at the heart of Moral Relativism, 3 problems which we will address (and more, but 3 is enough). 
+
 \subsection{The Criticism Problem}
 
 If we remember back to the Cultural Imperialism Argument, one of the core reasons it works is because we want to say that criticism of other societies (through word or action) is morally wrong. Though this does contradict Cultural Moral Relativism, that stance does have a variant to it built in. Namely:
@@ -214,6 +259,7 @@ The argument for this conclusion rests on the idea that if we accept moral relat
     \item Therefore Moral Cultural Relativism is false.
 \end{enumerate}
 The way out, for the relativist, is to claim that the Nazis and every other culture which has engaged in horrible acts weren't bad. This can be quite the pill to swallow. 
+
 \subsection{The Sheeple Problem}
 
 Some of you may have heard the term 'sheeple' before. It's a mash-up of the word 'sheep' and the word 'people'. In this case, if we take Moral Cultural Relativism seriously, thinking for yourself about morality is always morally wrong. This is not directly because of some universal moral rule, which would contradict Moral Relativism, rather it's because if something is a moral rule, then not abiding by it is morally wrong, and since every culture will have moral rules, not blindly following them will be wrong. Rather than speaking in negatives, we have this statement: 
@@ -260,26 +306,30 @@ The way out for the relativist is to claim that we haven't made progress, in any
 \chapter{Part 16: So, If Moral Relativism is Wrong, What Next?}
 
 If you are willing to say that moral cultural relativism is wrong, and, given the general responses to the various problems with moral relativism as well as what can be expected from the tests, you likely are willing to say that it's wrong, we have some problems. Namely, what is moral? Who decides who's correct in a moral conflict? Where do moral truths come from? Here I will cover some of the basic questions which former relativists tend to give and the general responses (sometimes, the response will need to be more particular).
-\subsection{If culture's don't choose, what is morality?}
+
+\section{If culture's don't choose, what is morality?}
 
 There are a few ways to go about replying to this question. Morality/ethics centers around 'should' questions of a certain kind. When we ask questions like these, for example "what should I do?", "should you call a doctor?", "should you get the assignment in on time?",  there are two different senses, which may or may not overlap, depending on context and relevance. Something is moral/ethical when it's the correct answer to the question "what should I do?", when we aren't talking about practical cases (a practical case is one where you are asking about the correct way to perform some task, like changing the oil on your car). The cultural moral relativist would claim that the correct answer to the question in non-practical cases (for example, should I flip the switch in the trolley problem?) will depend on your culture and the norms associated with it. The moral objectivist, a moral realist who is also a non-relativist, would claim that there's an actual answer to this question, which is not determined by your culture. The next module of this class covers some of the ways which philosophers have answered how to answer that question, without being relativist. Ethics is, at it's core, trying to find the correct answer to this question.
 
 You will notice that when I give examples of cultural norms, most of the time, these are cases where the culture got the answer wrong. Ethical theories are basically hypotheses about the correct way to get the answer to the question. Some theories point to absolute, objective duties which a person has (typically, it's wrong to be irrational; acting in a certain way is irrational, therefore those ways of acting are wrong). Others point to the well-being of those affected (if an action makes the affected better off than otherwise, that's the right action). Others still point to some exemplar of morality, some person who has the perfect character and then asks "what would that person do?". You may have heard that kind of thinking before with 'WWJD'.  
-\subsection{Who decides who's right in moral conflict?}
+
+\section{Who decides who's right in moral conflict?}
 
 A moral conflict is a case where two or more people/groups disagree about the answer to the "What should I do?" question, in the relevant sense. The moral cultural relativist has a simple way to answer it, almost too simple, "if it's two groups in the same culture, the cultural norms settles the conflict, if it's two cultures, there's no real conflict." But this just does not seem right, if you recall the last page, were this true, all civil rights movements would wrong, because the cultural norms would settle the conflict in favor of the oppressing group. Very few of us would want this. So, that's out, but is there a non-cultural way to get the answer? This is the quest for the moral realist. It's not going to be based on belief (as the relativist points to).
 
 Recall the Cultural Differences Argument. This argument relies on moral conflicts/disagreements. But, do we always settle debates like that? There may be disagreement about something, anything (for that matter), but it doesn't follow that there's no fact of the matter. If there's a conflict about math, we don't say that there's no answer, we consult the rules of mathematics (as they were discovered, not invented). When there's a conflict in science, we don't say that there's no answer, we perform experiments and discover the truth. For the moral realist, settling moral conflicts is more like settling a conflict in math or science than one in art. Realists perform experiments and consult the rules of morality to settle the debates (and the experiments either further support the rules or give examples of amendments which should be made). The quest to get the non-relativist rule to settle moral conflicts is hard, but it does not seem impossible, we do make progress in it. There's even a scientific-style method for figuring out which ethical theories should be applied and/or how they should be amended (as we will see in the next module).
 
 In short, no one decides who's right in a moral conflict, it's just a fact that one is right and the other is wrong.
-\subsection{Where do moral truths come from?}
+
+\section{Where do moral truths come from?}
 
 Moral truths are the answers to the "what should I do?" question (in the relevant sense). The moral cultural relativist has a simple, again almost too simple, answer "from the beliefs of the culture." Yet again, how can we possibly say that a culture has the wrong answer to the question when the culture chooses the answer? Like the issues before, this just can't be right. So, the question for the realist is just that, where do they come from? 
 
 For the realist, this is like asking "where do scientific truths come from?" or "where do mathematical truths come from?". Some moral realists point to God and say that all truths flow through Him, moral truths included, saying that God made them (an easy way to get all-knowing and all-good). Others point to the sort of creatures we are and our place in nature, these give us moral truths. Others still point to abstract notions of well-being or rationality.  And even more say that moral truths are things which just could not have been otherwise, they just always are, they didn't "come from" anything. There is some debate about where they come from.
 
 But, don't lose heart! There's just as much debate about where mathematical and scientific truths come from. For example, in the case of math, we could claim that the truths are necessary, they could not have been otherwise. We could claim, with just as much evidence, that the truths are constructs of the definitions of the terms which we are using overlapping in consistent ways (1+2=3 because of the definitions of the terms and operations). And we could also claim that the truths came from God.  As it turns out, in philosophy, the most common stance (for where mathematical truths come from and where moral truths come from) is that they always were and always will be.
-\subsection{What about forcing them onto another culture?}
+
+\section{What about forcing them onto another culture?}
 
 This is a hard problem, because one of the core intuitions behind the Moral Relativist, and one of the big reasons why the stance is contradictory, is that it’s wrong to force your morals onto another. The Moral Objectivist will claim that under the right circumstances, it’s morally required that you force another to change. To some, this feels wrong. This feeling, often, gets traced back to the horrors of history, which I used as examples for the intuition behind the Cultural Imperialism Argument, where one group imposed themselves on another. At the same point, we need to look at history as a whole. There have been times when it was actually correct for one group to come in and force a change. In those cases, the imposing groups had real morality on their side and in the cases where it was wrong, we can say that they were mistaken about morality. For example, the Nazis in WW2 were just wrong about morality and the groups which came in were right. So, the Moral Objectivist just needs to be sure that their moral theory is getting the right answer in the case. This is an epistemological worry for the objectivist, not an ethical, meta-ethical, or metaphysical one. 
 
@@ -289,15 +339,21 @@ Interestingly, when we look at our own history, we find things which we are asha
 
 Moral Relativism and Moral Objectivism (Realism) are not the only meta-ethical stances, there are two others worth noting (though this does go beyond the necessary scope of this class). Like Moral Relativism, these stances deny that there are absolute moral truths. But, unlike Relativism, these theories claim that they aren't relative. They claim that there's no truth to them at all, regardless of context. Theories which do this fall into a category called 'Moral Nihilism'. Like Relativism, Nihilism comes as a family and you can pick and choose accordingly. Skepticism is most like Nihilism in how the family tree is organized. 
 
-[need diagram]
-
 Moral Nihilism, like Moral Relativism, is limited, it only makes claims about moral claims. Like Relativism, if you find one absolute, objective truth, then Global Nihilism is false, but for Limited Nihilism, you would need to find it in the context it's limited to. The two major theories which call Moral Nihilism home are 'Error Theory' and 'Expressivism'. Of the two, Error Theory is the strongest, but it can be quite counter-intuitive. 
 
 \subsection{Error Theory}
 
-Error Theory, applied differently, is a concept and stance which can be found in other areas of philosophy, though I have personally mostly encountered it in Metaphysics. It is a lot like Skepticism, but rather than saying that we will never know about the thing, it says that we will always be mistaken.  For Meta-Ethics, this is the stance that all of our moral judgments will be mistaken. We will always be in error, hence the name. This is true even if we were to randomly chose an answer. For the Error Theorist, we will ask questions about a subject, sincerely try to answer them, but will always get the wrong answer. There is no right answer.  Applied in other fields, it claims that all of our judgments in those fields will always be in error. They come to this conclusion from three assumptions, or starting points, which get them off the ground:
+Error Theory, applied differently, is a concept and stance which can be found in other areas of philosophy, though I have personally mostly encountered it in Metaphysics. It is a lot like Skepticism, but rather than saying that we will never know about the thing, it says that we will always be mistaken.  For Meta-Ethics, this is the stance that all of our moral judgments will be mistaken. We will always be in error, hence the name. This is true even if we were to randomly chose an answer. For the \glspl{error theory}, we will ask questions about a subject, sincerely try to answer them, but will always get the wrong answer. There is no right answer.  Applied in other fields, it claims that all of our judgments in those fields will always be in error. They come to this conclusion from three assumptions, or starting points, which get them off the ground:
 
 First, they need to have the standard-issue feature of a moral nihilistic stance, this is that morality is not a feature of the world. In other words, there are no moral facts. Some could say that morality is a useful fiction or say that morality is self-contradictory or some other means. The second feature is a bit more precise to this stance. This is the claim that no moral judgments will ever be correct/accurate.  This follows, using some fairly simple reasoning, from the first feature. For our judgments to be accurate/correct, they must correctly/accurately depict something. However, because of the core premise to Moral Nihilism, there's nothing for the judgment to correctly depict, so it can never be accurate/correct. The third aspect follows suit, they claim that it's pretty obvious that people try to use moral judgments, we act on them, and we think about them, but those judgments will always be in error, hence the name. Since our judgments can never be correct, they will always be wrong. The error theorist is making a pretty big claim. They aren’t just trying to bash on social policies and individual actions. They are going all out and claiming that morality is a fiction.
+
+\newglossaryentry{error theory}
+{
+  name=error theory,
+  description={A general claim that all other claims within a field of study or context will always be mistaken, try as we might to say something truthful, we cannot because there are no truths in that area or context},
+plural=Error Theorist
+}
+
 
 They are essentially the atheists of ethics. Atheists hold that there are no religious features in the world, the error theorist holds the same about ethical features. The atheist holds that, try as you might, all religious doctrines are mistaken because (for example) God does not exist. The error theorist holds that, try as you might, ethical judgments/beliefs are all mistaken because morality does not exist.
 
@@ -309,7 +365,16 @@ To get error theory off of the ground, they need to convince us of 2 things. Fir
 
 \subsection{Expressivism}
 
-Expressivism could, in principle, be a stance in other areas of philosophy and maybe, for some of them, it could make a solid stance, but I have not encountered it so much in my time and, when I have, it has almost exclusively been in Ethics. As I mentioned before, given the core flaws in trying to prove Error Theory (in the case of Ethics, in other fields this issue is not present), Expressivism is the stronger of the two. As it is a Nihilistic stance, it does come with two assumptions, but it differs from Error Theory in the last aspect.
+Expressivism could, in principle, be a stance in other areas of philosophy and maybe, for some of them, it could make a solid stance, but I have not encountered it so much in my time and, when I have, it has almost exclusively been in Ethics. As I mentioned before, given the core flaws in trying to prove Error Theory (in the case of Ethics, in other fields this issue is not present), 
+\Gls{expressivism} is the stronger of the two. As it is a Nihilistic stance, it does come with two assumptions, but it differs from Error Theory in the last aspect.
+
+\newglossaryentry{expressivism}
+{
+  name=expressivism,
+  description={A general claim that all other claims within a field of study or context are not intended to and do not express anything true or false, rather those claims are expressing emotions, commands, or questions. In ethics, saying something is wrong, according to this stance, is the same as saying something like `boo' and saying that something is right is the same as saying `yay'},
+plural=expressivist
+}
+
 
 First, as with the Error Theorist, the Expressivist claims that morality is not a feature of the world. But, it doesn't say that it's a useful fiction or anything like that. It also claims, but the same reasoning, that moral judgments are never accurate. But, it does not say that they are always wrong. I know that this last bit seems odd, so let me explain: The Moral Objectivist (Realist), Relativist, and Error Theorist all share one thing in common: When we make moral claims, we are, at least, trying to describe the world, pick out some feature in it. The Expressivist is different: They claim that when we make moral claims our intent is to express something, not describe. They think that our ethical statements/judgments aren't the sort of things which can be true/false, correct/incorrect, or accurate/inaccurate. Take these two examples: 
 \begin{tabular}{p{1in}|p{1in}}
