--- a/modeight.tex
+++ b/modeight.tex
@@ -2,11 +2,24 @@
 \label{ch.modeight}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 \chapter{Part 17: Normative Ethics}
-Our focus in this module will be normative ethics. It is worth noting that many people confuse normative ethics and descriptive ethics. Descriptive Ethics is the study of how people do, in fact, think about ethics. Different cultures and people think about ethics differently, this is fine and totally normal. Normative Ethics is concerned how we should be motivated and how we should act. Confusing these two has lead many people to moral relativism, but it's rooted in a confusion, not a fact. Confusing these two things also is the maid support for the Cultural Differences Argument which we saw before. The project in Normative Ethics is to find a theory which best explains our moral intuitions and best describes universally held moral standards. One way to think of the difference is that Descriptive Ethics is the realm of sociology, while Normative Ethics is the realm of philosophy.  Different theories have been made to best describe our moral intuitions and are still being made, each improving on the last (so there is progress). 
+Our focus in this module will be normative ethics. It is worth noting that many people confuse normative ethics and descriptive ethics. Descriptive Ethics is the study of how people do, in fact, think about ethics. Different cultures and people think about ethics differently, this is fine and totally normal. Normative Ethics is concerned how we should be motivated and how we should act. Confusing these two has lead many people to moral relativism, but it's rooted in a confusion, not a fact. Confusing these two things also is the main support for the Cultural Differences Argument which we saw before. The project in Normative Ethics is to find a theory which best explains our moral intuitions and best describes universally held moral standards. One way to think of the difference is that Descriptive Ethics is the realm of sociology, while Normative Ethics is the realm of philosophy.  Different theories have been made to best describe our moral intuitions and are still being made, each improving on the last (so there is progress). 
 \section{Ethical Theories}
-As we saw in the last module, Moral Relativism just can't be correct. The reasons for supporting it contradict each other or it leads to truly awful beliefs. If we still want to be Moral Realists, then we are going to need to go with something objective, a theory of morality which has a set of rules or guiding principles to tell us what to do.  Trying to answer this question has lead down two different paths, the first we will cover belongs to the Consequentialists, who hold that we can tell whether an action was morally right or wrong based on the consequences, hence the name. In general, this branch thinks in terms of well-being and happiness/sadness. The second path people have taken in trying to get to an Ethical Theory goes belongs to the Non-consequentialists, who hold that the consequences of an action have no baring on the morality. In general, this branch points to respect, free-will, the human spirit, and rationality to get the morally right actions. Sometimes you will find middle-ground theories, but these tend to come from the Consequentialists, not the Non-consequentialists. Both of these branches share one thing in common, though, they are trying to answer the question "what should I do?" There are other ethical questions out there concerning different questions, for example, the field of Virtue Ethics, found in Aristotle and most of Eastern Philosophy, is trying to answer the question "who should I be?", which is very different. It seems clear that a good person can make a moral error and a bad person can do the right thing.  For this class, we are mostly only going to be concerned with the 'what should I do?' question, but other philosophy classes are out there which cover the other question.
+As we saw in the last module, Moral Relativism just can't be correct. The reasons for supporting it contradict each other or it leads to truly awful beliefs. If we still want to be Moral Realists, then we are going to need to go with something objective, a theory of morality which has a set of rules or guiding principles to tell us what to do.  Trying to answer this question has lead down two different paths, the first we will cover belongs to the \Glspl{consequentialism}, who hold that we can tell whether an action was morally right or wrong based on the consequences, hence the name. In general, this branch thinks in terms of well-being and happiness/sadness. The second path people have taken in trying to get to an Ethical Theory goes belongs to the \Glspl{non-consequentialism}, who hold that the consequences of an action have no baring on the morality. In general, this branch points to respect, free-will, the human spirit, and rationality to get the morally right actions. Sometimes you will find middle-ground theories, but these tend to come from the Consequentialists, not the Non-consequentialists. Both of these branches share one thing in common, though, they are trying to answer the question "what should I do?" There are other ethical questions out there concerning different questions, for example, the field of Virtue Ethics, found in Aristotle and most of Eastern Philosophy, is trying to answer the question "who should I be?", which is very different. It seems clear that a good person can make a moral error and a bad person can do the right thing.  For this class, we are mostly only going to be concerned with the 'what should I do?' question, but other philosophy classes are out there which cover the other question.
 
-[need diagram]
+\newglossaryentry{consequentialism}
+{
+  name=consequentialism,
+  description={The general stance that the morality or permissibility of an action is determined by the consequences of that action. This is a family of theories which all share the basic command to promote the good, though they differ on what the good is and how one ought to promote it},
+  plural=consequentialists
+}
+
+
+\newglossaryentry{non-consequentialism}
+{
+  name=non-consequentialism,
+  description={The general stance that the morality or permissibility of an action is not determined by the consequences of that action. This is a family of theories which all share the basic idea that some actions are just wrong regardless of the good they might (will) produce; typically, these theories are duty-based, meaning that an action is moral if and only if you have a duty to do it and immoral if and only if you have a duty to refrain from doing it},
+  plural=non-consequentialists
+}
 
 For both the consequentialist and non-consequentialist branches of the tree, we can add further stances by asking various questions. For example, if we ask the question "Do I have moral duties to other people?" and get either "no" or "sometimes", then, likely, we are dealing with a flavor of ethical egoism, which is the stance that something is moral if it benefits you selfishly. You might have heard of this stance before, but by a different name. The most famous supporter of this was Ayn Rand.
 
@@ -32,7 +45,15 @@ Sometimes, however, it is harder to pinpoint something that the theory gets wron
 
 \chapter{Part 18: Utilitarianism}
 
-Utilitarianism is based on the idea that happiness is good. It is Consequentialist in nature. Utilitarian thinkers have traditionally understood happiness in terms of pleasure and the absence of pain. The general ideas behind this theory are found the world over, for example, you can find this theory being discussed and spread in Ancient China, in the Mohist School, between 479 BCE and 221 BCE. It was first really formalized by Jeremy Bentham (for a fun fact about him, look up the Auto-Icon) and then was further developed by John Stuart Mill, who is its best known advocate. Mill, characterizes utilitarianism as the view that “an action is right in-so-far as it tends to produce pleasure and the absence of pain.” Mill, also, has a fascinating life story as well, if you care to look into it.  If happiness, conceived of as pleasure and the absence of pain, is the one thing that has positive value and pain/sadness being pleasure's opposite (the one thing with negative value), then this criterion of right action should follow fairly quickly. This leads us to the Principle of Utility
+Utilitarianism is based on the idea that happiness is good. It is Consequentialist in nature. Utilitarian thinkers have traditionally understood happiness in terms of pleasure and the absence of pain. The general ideas behind this theory are found the world over, for example, you can find this theory being discussed and spread in Ancient China, in the Mohist School, between 479 BCE and 221 BCE. It was first really formalized by Jeremy Bentham (for a fun fact about him, look up the Auto-Icon) and then was further developed by John Stuart Mill, who is its best known advocate. Mill, characterizes \gls{utilitarianism} as the view that “an action is right in-so-far as it tends to produce pleasure and the absence of pain.” Mill, also, has a fascinating life story as well, if you care to look into it.  If happiness, conceived of as pleasure and the absence of pain, is the one thing that has positive value and pain/sadness being pleasure's opposite (the one thing with negative value), then this criterion of right action should follow fairly quickly. This leads us to the Principle of Utility.
+
+\newglossaryentry{utilitarianism}
+{
+  name=utilitarianism,
+  description={A form of Consequentialism which says that the morality of our actions is determined by the amount of happiness caused and suffering prevented. This is a form of Direct Consequentialism which takes happiness as the intrinsic good and suffering as the intrinsic bad},
+  plural=Utilitarian
+}
+
 
 In any given scenario, the actions we make in that scenario will have consequences. We assign those consequences value based on the amount of happiness (pleasure) caused and the amount of sadness (pain) caused, for all beings affected, that action's utility. The utility of an action is the net total of pleasure caused by the action minus any pain caused by that action. In calculating the utility of an action, we need to consider all of the effects of the action, both long run and short run. Given the utilities of all available courses of action, utilitarianism says that the correct course of action is the one that has the greatest utility. So an action is right if it produces the greatest net total of pleasure over pain of any available alternative action. Note that sometimes no possible course of action will produce more pleasure than pain. This is not a problem for utilitarianism as we’ve formulated it. Utilitarianism will simply require us to pursue the lesser evil. The action with the highest utility can still have negative utility.
 
@@ -67,6 +88,7 @@ Give money to broke relative&60&20&40
 \end{tabular}
 
 Like I said, you can use different sizes, just keep them the same in the same case. As we can see, the amount of suffering caused by my action is around the same across the board. But the amount of pleasure is different, the one with the most is to donate the money to a food bank. According to the utilitarian, this is what I should do.
+
 \section{Why People Like This Theory}
 
 There are several reasons why people tend to like this theory. In other words, there are several positive aspects of it which seem to get morality right. The first reason is that the theory is impartial. It does not have in it any sort of bias for or against a person or even animal. As Jeremy Bentham put it, it doesn't matter whether they can speak or whether they can problem-solve, rather it only matters whether they can suffer. As a result, it doesn't matter whether you are rich, poor, black, white, male, female, man woman, part of some religious sect, or none at all. Morally speaking, you are equally worthy of consideration. Sometimes we take this sort of equality for granted, but when this theory was being formulated, it was not the norm, and even today, equality of this sort is fought for. You don’t need to argue for it in utilitarianism, it comes built in.
@@ -80,6 +102,7 @@ The fourth plus which this theory has going for it is its flexibility. As I ment
 \section{Concerns for Utilitarianism}
 
 Now, this theory is really good at a lot of things, it is especially useful in high-stakes situations, but there are some concerns which need to be addressed and areas of improvement. The first is an epistemological worry which should have caught your eye in the last page. Often, We don’t know (and sometimes we can't know) what the consequences of our actions will be in the long term. Sometimes, even in the short term, we may be uncertain about what will happen. For example, what if one of the people affected is particularly strange and gets happiness from pain? These worries point to a concern about the practicality of the theory.  It's difficult to use it in our daily lives. This worry/concern does NOT take Utilitarianism out of running for being a good Normative Ethical Theory, though. As a normative ethical theory, utilitarianism is aimed at identifying the standard for right action, not telling when a particular action meets that standard. Setting the standard for right action and figuring out how to meet that standard are two different projects. But they aren't the only worries for this primitive form of Utilitarianism (Act-Utilitarianism). There are other worries which are troubling for the very core of the theory, the Principle of Utility.
+
 \subsection{The Porky the Pig Problem Problem}
 
 When we speak of utility as pleasure and the absence of pain, we need to take “pleasure” and “pain” in the broadest sense possible. There are social, intellectual and aesthetic pleasures to consider as well as sensual pleasures. Recognizing this is important to answering what Mill calls the “doctrine of swine” objection to Utilitarianism. This objection takes the Utilitarianism to be unfit for humans because it recognizes no higher purpose to life than the mere pursuit of pleasure. This objection only applies to treating pleasure and pain in their most basic, animalistic, senses.  This was not originally mine, but a version of it was given as a two day lecture when I was in community college. The very original version is not as fun to give and it was published by G.E. Moore in 1903. If you want to see one other objection, one which you could write about in the assignment as well as the original objection to hedonism (which is a more primitive form of utilitarianism, without special amendments, utilitarianism falls into both of these problems). But, here we go:
@@ -100,9 +123,11 @@ But this can't be right. The core of it is that there is no consent (among other
     \item[]Porky’s actions are not morally permissible.
     \item[]Therefore, Utilitarianism is not correct.
 \end{earg}
+
 \subsubsection{The Reply to Porky}
 
 Because of this objection, Mill and others don't take pleasure in the animalistic sense, but rather in a far more broad sense, where the other intellectual and emotional pleasures are taken into account. Mill responds that it is the person who raises this objection that portrays human nature in a degrading light, not the utilitarian theory of right action. People are capable of pleasures beyond mere sensual indulgences and the utilitarian theory concerns these as well. Mill then argues that social and intellectual pleasures are of an intrinsically higher quality than sensual pleasure. This response seems OK to some, but others argue that a sufficient amount of physical pleasures can, in principle, outweigh the intellectual.
+
 \subsection{The Utility Monster Objection}
 
 One objection to Utilitarianism isn't concerned with what it measures to determine morality or even how it is measured, rather this objection concerned how it determines the morally right action given the outcomes. As Act-Utilitarianism sits right now, it claims that the morally right action is the one with the highest outcome given the available options. This, however, leads to the possibility of a utility monster. A utility monster is a being which receives a massive quantity of pleasure (happiness, the good) from consuming resources, higher than any other being, by a significant margin, often at the expense of others. Just a cursory glance over the numbers would have Act-Utilitarianism claim that such a utility monster is doing the right thing in exploiting or harming others for their own benefit, because of the massive amount of good which they receive. To put this idea as an example, take the following case:
@@ -112,6 +137,7 @@ One objection to Utilitarianism isn't concerned with what it measures to determi
 In this case, most of us would say that it's wrong for the utility monster to destroy Singer's pipes. There are concerns about personal property and there are concerns about the harm done to Singer. However, Act-Utilitarianism, without any modifications, measures pleasure and pain with the same metric. One unit of happiness cancels out one unit of sadness. As a result, so long as the Utility Monster didn't have any other options which would cause a higher total, Act-Utilitarianism would say that they did the right thing. This does not square with general intuitions about morality. 
 
 Act-Utilitarianism gets the wrong result in this sort of case. And this objection is so basic, to the core of Act-Utilitarianism, that it might lead us to a change in theory, amend the theory to better fit our intuitions. One possible alteration is to change what is measured to determine morality. In this case, rather than measuring happiness and sadness equally, you only measure the sadness caused by the action or inaction. This is called negative utilitarianism. Negative Utilitarianism was proposed, most notably, by Karl Popper in his work On the Open Society and Its Enemies. Popper states that the morally right action is the one which minimizes suffering, rather than maximizing pleasure. Going this route avoids both the Utility Monster Objection as well as the Porky the Pig Problem but it also leads to certain other problems, if you take the letter, rather than the spirit, of the moral theory. 
+
 \subsection{The Organ Harvest Problem}
 
 This problem is often seen as a more gruesome version of the Trolley Problem for Ethics. This objection to Act-Utilitarianism stems from the idea that only the results matter, the ends justify the means. I personally have other versions of problems like this which involve framing an innocent person, forging evidence, and rigging elections, all of which have (due to the situation that they are in) the best consequences. Consider the following case:
@@ -121,6 +147,7 @@ This problem is often seen as a more gruesome version of the Trolley Problem for
 The question for the Act-Utilitarian is "what should the doctor do?" According to the theory, it seems that the good doctor should quickly and as painlessly as possible kill Bob and harvest his organs, getting them to the 6 other patients as quickly as possible. This is because, to quote Spock, "the needs of the many outweigh the needs of the few." The overall outcome of letting Bob go is the value of one average good life minus the values of six average good lives and the overall outcome of killing Bob is the value of six average good lives minus the value of one. But this can't be right. Our intuitions clearly speak to the immorality of this.  Act-Utilitarianism, again, gets the wrong result in this sort of case. 
 
 \section{Rule Utilitarianism}
+
 After having the concerns with Act-Utilitarianism, more particularly, cases similar to the Organ Harvest Problem, many people have thought to amend Utilitarianism to better fit those cases. These amendments are perfectly fine, but they have reached the point where they have developed into two different theories in this family. The first, which we will cover in this class, is called Rule Utilitarianism and the second, which we will not be covering, is called Negative Utilitarianism.
 
 Rule Utilitarians move away from the idea that we need to max-out the utility of a given action. These Consequentialists look at the rule which was followed in making the action (hence the name). They say to act according to the rule which, if followed by everyone, would lead to the greatest utility generally. So, for example, if we look at the Organ Harvest Problem, a rule which had doctors kill their patients to save others (kill one to save six) would not have a very high utility if all doctors followed it. People would stop going to the doctor, they wouldn't trust medicine, etc. On the other hand, a rule which had doctors do no harm (forcing a difference between doing and allowing harm) would lead to a greater utility overall. We trust our doctors, in part, because of this. So, a move to this sort of Rule Utilitarianism might be a step in the right direction. But, there is a third rule with an even bigger utility.
@@ -131,21 +158,38 @@ In order to deal with the original problem of Bob and his vital organs, the Rule
 
 \chapter{Part 19: Kantianism}
 
-Like Utilitarianism, Imannual Kant’s moral theory states that there is an absolute moral rule. But, unlike Utilitarianism, it states that the consequences of the action don't matter morally. It is, however, grounded in a theory of intrinsic value. Rather than going with the Principle of Utility, Kant's theory has it that the only thing with moral worth is the Good Will, which we find in persons. Persons, for this theory are  autonomous rational moral agents. This theory, from the very start, makes a certain metaphysical assumption: People have free will. This can't be the kind of free will proposed by the Compatibilist in the sense we have seen in this class, as Kant was fundamentally opposed to it, so the sense of free will must be the Libertarian sense. There have been attempts to make a Kantian Compatibilism, but those seem to have been unsuccessful.1
+Like Utilitarianism, Imannual Kant’s moral theory states that there is an absolute moral rule. But, unlike Utilitarianism, it states that the consequences of the action don't matter morally. It is, however, grounded in a theory of intrinsic value. Rather than going with the Principle of Utility, Kant's theory has it that the only thing with moral worth is the Good Will, which we find in persons. Persons, for this theory are  autonomous rational moral agents. This theory, from the very start, makes a certain metaphysical assumption: People have free will. This can't be the kind of free will proposed by the Compatibilist in the sense we have seen in this class, as Kant was fundamentally opposed to it, so the sense of free will must be the Libertarian sense. There have been attempts to make a Kantian Compatibilism, but those seem to have been unsuccessful.
 
-Kant's Moral Theory rests on this notion of the Good Will, so we should be clear about what that is. The opening passage of Immanuel Kant’s Groundwork for a Metaphysic of Morals proclaims that “it is impossible to conceive of anything in the world, or indeed beyond it, that can be understood as good without qualification except for a good will.” This eloquent sentence places this 'Good Will' at the center of Kant's value theory. The one thing that has intrinsic value, for Kant, is the autonomous good will of a person. But we can't understand Kant's Good Will in the ordinary sense. In everyday discourse we might speak of someone being a person of good will if they want to do good things. But this would be a Consequentialist take. On Kant’s view, the person with Good Will wants  good things out of a sense of moral duty, not just some habit or tendency.
+\glspl{kantianism} rests on this notion of the \glspl{good will}, so we should be clear about what that is. The opening passage of Immanuel Kant’s Groundwork for a Metaphysic of Morals proclaims that “it is impossible to conceive of anything in the world, or indeed beyond it, that can be understood as good without qualification except for a good will.” This eloquent sentence places this 'Good Will' at the center of Kant's value theory. The one thing that has intrinsic value, for Kant, is the autonomous good will of a person. But we can't understand Kant's Good Will in the ordinary sense. In everyday discourse we might speak of someone being a person of good will if they want to do good things. But this would be a Consequentialist take. On Kant’s view, the person with Good Will wants  good things out of a sense of moral duty, not just some habit or tendency.
 \factoidbox{The naturally generous philanthropist doesn’t demonstrate their good will through their giving according to Kant, but the selfish greedy person does show their good will when they give to the poor out of a recognition of their moral duty to do so even though they’d really rather not.}
+
+\newglossaryentry{kantianism}
+{
+  name=kantianism,
+  description={The philosophical theories proposed and defended by Immanual Kant},
+  plural=Kant's Moral Theory
+}
+
+\newglossaryentry{good will}
+{
+  name=good will,
+  description={The one intrinsic good according to Kant's non-consequentialist theory of morality. All rational autonomous people have this `good will'. It comes from our ability to rationally and freely choose to act on our duties. According to Kantianism, anything which thwarts or hinders either another's free will or ratonality is wrong},
+  plural=Good Will
+}
+
 
 So, to be worthy of dignity and moral regard, for Kant, we need to have the ability to see what our moral duty is and act according to it. For Kant, then, in order to be worthy of moral consideration, we need to be able to act in a way which is opposed to our desires/conditioning. Having an autonomous good will with the capacity to act from moral duty is central to being a person in the moral sense and it is the basis, the metaphysical grounding, for an ethics of respect for persons. Now what it is to respect a person merits some further analysis.
 
 Kant's version of the Principle of Utility, his fundamental principle to guide our actions and thereby give people the dignity and respect worthy of their Good Will is called The Categorical Imperative. An imperative is a command or order given. Kant, and others, explain this kind of imperative by contrasting it with another kind, a hypothetical imperative. A hypothetical imperative is a command, but it only applies conditionally according to your desires, what your goal is. For example, "if you want to avoid traffic, leave 15min early." This imperative tells you what to do if you want to avoid traffic, but it fails to tell you what to do in a case where you don't want to avoid traffic. A categorical imperative (though Kant thinks there's only one) is different in that it tells you what to do regardless of your goal or desires. It applies according to the kind of action you are taking, not why you are taking it. Kant also holds that if there is a moral law, it will be the Categorical Imperative. Treating it that way, moral reasons must always overshadow any other sort of reasons which can be given. You might, for instance, think you have a self-interested reason to cheat on exam. But if morality is grounded in a categorical imperative, then your moral reason against cheating overrides your self-interested reason for cheating. If we think considerations of moral obligation trump self-interested considerations, Kant’s idea that the fundamental law of morality is a categorical imperative accounts for this nicely.
 
 Although Kant gives 4 different statements of the Categorical Imperative and claims that they all boil down to the same basic idea, there is some debate about whether they do. Two of the formulations just seem to be restatements of the other two, and the debate is over whether these two can be formed together. Once you see them, you will see that they certainly don't look like they are expressing the same idea. The first formulation which we will cover is called The Principle from Humanity, for this class, though other names for it are out there. The second formulation is called The Principle from Universalizability for this class, though, again, other names are out there.
+
 \section{The Principle From Humanity}
 \begin{center}
 Always treat persons (including yourself) as ends in and of themselves and never as a mere-means
 \end{center}
 This formulation tells us to treat individuals as ends in themselves, but what does that mean? How do I use people as mere-means? How could I use myself that way? This formulation or principle is noted for really highlighting the notion that people are intrinsically valuable. To say that persons have intrinsic value is to say that they have value independent of their usefulness for this or that purpose.  They are not a tool or resource which you can use without consideration of their worth. the Principle from Humanity does not say that you can never use a person for your own purposes (using them as a means). If this were the case, you taking a class from me would be morally wrong. It tells us never to use others as a mere-means.
+
 \subsection{Means Vs Mere-Means}
 
 We treat people as a means to our own ends in ways that are not morally problematic all the time. When I go to a grocery store to pick up some food, I treat the clerk as a means to my end of buying food. But I do not treat that person as a mere-means to my own end. I accomplish my end of buying food through my interaction with the clerk only with the understanding that the clerk is acting autonomously in serving me. My interaction with the clerk is morally acceptable so long as the clerk is serving me voluntarily, or acting autonomously for his own reasons.
@@ -203,7 +247,14 @@ Act only on the maxim that you can consistently will to be a universal law
 \end{center}
 This version is also known as the formula of the universal law. The maxim of our action is the base-level reason or principle that determines what we are doing. We act for our own reasons and different goals might lead to similar actions. For example, a person might wash their clothes regularly because they don't want to smell bad while another person might do the same because they don't want their significant other to complain about the stack of clothes near the closet. Though they have the same action attached to them, the maxim behind the action will be different.  For Kant, intentions matter and this formulation really gets at this point. He evaluates the moral status of actions not according to the action itself or according to its consequences, but according to the maxim of the action. Whether an action is right or wrong  is determined by the actor’s intentions or reasons for acting.
 
-It should be noted that a maxim should not include your personal wants and desires, those would make it a hypothetical imperative. A maxim should be written/phrases as something along the lines of "I will A in order to realize C." Where A is the action you want to perform and C is the reasoning behind the action. So, suppose that I am deep in debt to a loan shark because of my gambling habit. I go to the bank to get a loan to pay the loan shark and save my knee-caps. The maxim for my action here would be something along the lines of "I will lie in order to get money."
+It should be noted that a \gls{maxim} should not include your personal wants and desires, those would make it a hypothetical imperative. A maxim should be written/phrases as something along the lines of "I will A in order to realize C." Where A is the action you want to perform and C is the reasoning behind the action. So, suppose that I am deep in debt to a loan shark because of my gambling habit. I go to the bank to get a loan to pay the loan shark and save my knee-caps. The maxim for my action here would be something along the lines of "I will lie in order to get money."
+
+\newglossaryentry{maxim}
+{
+  name=maxim,
+  description={The reason and goal for which you are acting. This is typically of the form ``whenever I am A then I will E''}
+}
+
 
 According to this formulation, what makes an action morally acceptable is that its maxim is universalizable. That is, morally permissible action is action that is motivated by an intention that we can rationally will that others act on similarly. A morally prohibited action is just one where we can’t rationally will that our maxim is universally followed. Basically, ask yourself "am I making a special exception for myself?" "could anyone in my situation do this?" If anyone with similar desires could do what you are doing and accomplish them, then you are morally in the clear, otherwise you are morally up a creek.
 
