--- a/modsix.tex
+++ b/modsix.tex
@@ -9,13 +9,28 @@ When faith and dogma dominate the intellectual scene, “How do we know?” is s
 
 Descartes is considered by many to be the founder of modern philosophy. He was also an important mathematician and he made significant contributions to the science of optics. You might have heard of Cartesian coordinates. Thank Descartes. Very few contemporary philosophers hold the philosophical views Descartes held. His significance lays in the way he broke with prior tradition and the questions he raised in doing so. Descartes frames some of the big issues philosophers continue to work on today. Notable among these are the foundations of knowledge, the nature of mind and the question of free will. We’ll look briefly at these three areas of influence before taking up a closer examination of Descartes’ philosophy through his Meditations of First Philosophy.\autocite{Descartes1}
 
-To ask “How do we know?” is to ask for reasons that justify our belief in the things we think we know. This is the branch of philosophy called 'Epistemology', which is a fancy word for the study of knowledge (a little meta, I know). The epistemological project of providing systematic justification for the things we take ourselves to know was launched by Descartes and it remains a central endeavor in epistemology to this day. This project carries with it the significant risk of finding that we lack justification for things we think we know. This is the problem of skepticism. Skepticism is the view that we can’t know. Skepticism comes in many forms depending on just what we doubt we can know. While Descartes hoped to provide solid justification for many of his beliefs, his project of providing a rational reconstruction of knowledge fails at a key point early on. The unintended result of his epistemological project is known as the problem of Cartesian skepticism. We will explain this problem a bit later in this chapter.
+To ask “How do we know?” is to ask for reasons that justify our belief in the things we think we know. This is the branch of philosophy called \Gls{epistemology}, which is a fancy word for the study of knowledge (a little meta, I know). The epistemological project of providing systematic justification for the things we take ourselves to know was launched by Descartes and it remains a central endeavor in epistemology to this day. This project carries with it the significant risk of finding that we lack justification for things we think we know. This is the problem of skepticism. \Gls{skepticism} is the view that we can’t know. Skepticism comes in many forms depending on just what we doubt we can know. While Descartes hoped to provide solid justification for many of his beliefs, his project of providing a rational reconstruction of knowledge fails at a key point early on. The unintended result of his epistemological project is known as the problem of Cartesian skepticism. We will explain this problem a bit later in this chapter.
+
+
+\newglossaryentry{epistemology}
+{
+name=epistemology,
+description={A field of study within Philosophy dedicated to questions concerning knowledge, belief, and justification}
+}
+
+\newglossaryentry{skepticism}
+{
+name=skepticism,
+description={The epistemological stance that knowledge is impossible either globally (it is impossible to know anything at all) or locally (knowledge is impossible within certain topics)}
+}
+
+
 
 Another area where Descartes has been influential is in the philosophy of mind (Module 3). Descartes defends a metaphysical view known as dualism that remains popular among many religious believers. According to this view, the world is made up of two fundamentally different kinds of substance, matter and spirit (or mind). Material stuff occupies space and time and is subject to strictly deterministic laws of nature. But spiritual things, minds, are immaterial, exist eternally and have free will. If dualism reminds you of Plato’s theory of the Forms, this would not be accidental. Descartes thinks his rationalist philosophy validates Catholic doctrine and this in turn was highly influenced by Plato through St. Augustine.
 
 The intractable problem for Descartes’ dualism is that if mind and matter are so different in nature, then it is hard to see how they could interact at all. And yet when I look out the window, an image of trees and sky affects my mind. When I will to go for a walk, my material body does so under the influence of my mind. This problem of mind body interaction was famously and forcefully raised by one of the all too rare female philosophers of the time, princess Elizabeth of Bohemia.
 
-A whole branch of philosophy, the philosophy of mind, is launched in the wake of problems for substance dualism. Today, the philosophy of mind is merging with neuroscience, cognitive psychology and information science to create a new science of mind. We are rapidly learning how material brains realize the processes of thought. Once again, Descartes has failed in a most fruitful way. We also see how undeserved philosophy’s reputation for failing to answer its questions is. While many distinctively philosophical issues concerning the mind remain, the credit for progress will go largely to the newly minted science of mind. The history of philosophy nicely illustrates how parenthood can be such worthwhile but thankless work. As soon as you produce something of real value, it takes credit for itself. Later in a chapter on the philosophy of mind we will examine some developments in this area since Descartes and get acquainted with a few of its contemporary issues including the nature of consciousness.
+Previously, we explored the philosophy of mind which was  launched in the wake of problems for substance dualism and because of the advancements there, Descartes' fruitful failure lead to neuroscience, cognitive psychology and information science. We also see how undeserved philosophy’s reputation for failing to answer its questions is. While many distinctively philosophical issues concerning the mind remain, the credit for progress will go largely to the newly minted science of mind. The history of philosophy nicely illustrates how parenthood can be such worthwhile but thankless work. As soon as you produce something of real value, it takes credit for 
 
 The final big issue that Descartes brought enduring attention to is the problem of free will (Module 4). We all have the subjective sense that when we choose something we have acted freely or autonomously. We think that we made a choice and we could have made a different choice. The matter was entirely up to us and independent of outside considerations. Advertisers count on us taking complete credit and responsibility for our choices even as they very effectively go about influencing our choices. Is this freedom we have a subjective sense of genuine or illusory? How could we live in a world of causes and effects and yet will and act independent of these? And what are the ramifications for personal responsibility? This is difficult nettle of problems that continues to interest contemporary philosophers.
 
@@ -23,7 +38,7 @@ Descartes’ is also a scientific revolution figure. He flourished after Galileo
 
 \chapter{Part 13: An Overview of Descartes' Meditations on First Philosophy}
 
-Epistemology (from the Greek word %ἐπιστήμη 
+\Gls{epistemology} (from the Greek word ἐπιστήμη 
 (epist\-em\-e) meaning ‘knowledge’) is a branch of philosophy which deals with knowledge and belief. Some of the questions which are found there are:
 \begin{enumerate}
     \item What does it take to know something?
@@ -38,7 +53,7 @@ Despite what others may tell you, and I have debated this on many occasions, Des
 
 The meditations are broken up into 6 parts and each serves a different purpose. I encourage you to read all 6, but the first 2 are enough for this module.
 \section{The First Meditation}
-Below is the first small section of this meditation, written in more plan language. The point of thesemeditations is to break down everything, doubt everything, until we can find something which can’t be doubted and use that as the basis for building up a 100\% guaranteed true set of beliefs/knowledge. The first meditation concerns what can be doubted.
+Below is the first small section of this meditation, written in more plan language. The point of these meditations is to break down everything, doubt everything, until we can find something which can’t be doubted and use that as the basis for building up a 100\% guaranteed true set of beliefs/knowledge. The first meditation concerns what can be doubted.
 
 \factoidbox{Several years ago, I came to the opinion that many of the things which I believed were true, were, in fact, false; and when that happened, I thought that I should do the job of trying to rid myself of these false opinions in order to get an indubitable structure for knowledge (science). But I waited until I was older and wiser so that I could have very little doubt in my abilities. On this account, I have delayed so long that it would be wrong to keep thinking on it and I should just put pen to paper. Today, then, since I don’t have anything which I need to do because I am retired, I will at length apply myself earnestly and freely to the general doubting of all my former opinions.}
 
@@ -135,13 +150,29 @@ Having diagnosed the fatal flaw in Descartes’ project, we should briefly consi
 
 \chapter{Part 14: Knowledge and Justification}
 
-In the previous section of this module, we were discussing Rene Descartes and his quest for certainty and knowledge. He did this by employing a form of methedological skepticism, doubt everything which can be doubted. In philosophy, knowledge, as we are going to use it, is justified true belief. The study of knowledge is called Epistemology. While some claim that it is possible to know something without believing it and others claim that it is possible to know something false, these stances are pretty easily pushed aside. There are several ways in which one could be justified, for various things. For example, being entitled to your medical records makes you justified in requesting them. However, the sort of justification seen when it comes to knowledge is different. Epistemic justification is the kind found when it comes to knowledge. This is background reasoning which supports the belief. A belief is epistemically justified if we have sufficiently good reason to think that the belief is true. Much of the debate in Epistemology centers around the standards for justification. If you believe something and that thing happens to be true, what else is needed for you to know it?
+In the previous section of this module, we were discussing Ren\'e Descartes and his quest for certainty and knowledge. He did this by employing a form of methedological skepticism, doubt everything which can be doubted. In philosophy, \gls{knowledge}, as we are going to use it, is justified true belief. While some claim that it is possible to know something without believing it and others claim that it is possible to know something false, these stances are pretty easily pushed aside. There are several ways in which one could be justified, for various things. For example, being entitled to your medical records makes you justified in requesting them. However, the sort of justification seen when it comes to knowledge is different. Epistemic justification is the kind found when it comes to knowledge. This is background reasoning which supports the belief. A belief is epistemically justified if we have sufficiently good reason to think that the belief is true. Much of the debate in Epistemology centers around the standards for justification. If you believe something and that thing happens to be true, what else is needed for you to know it?
 
-Some of you might think that you just need to be right to know it. However, if you are like most of us, there have been times when you were correct purely by chance. For example, recently, my little brother came to me with a question about Dragon Ball Z and the time travel in it. As an expert on theories of time travel, I thought this was great. He came up with the idea that there had to be four different timelines in the show, given what he had see thus far. Explaining that there had to be two different versions of the same character and so forth. As it turns out, he was correct, there did need to be two different versions of that character and there needed to be 4 timelines, but for completely different reasons than the ones he laid out. He later said that it didn't feel like he was correct, something was missing. I quickly recognized what was missing: adequate justification. The structure of his reasoning, though it lead to the correct answer, wasn't accurate.
+\newglossaryentry{knowledge}
+{
+name=knowledge,
+description={Justified True Belief; You have good reason to believe it, you do believe it, and your belief is, in fact, accurate}
+}
+
+
+Some of you might think that you just need to be right to know it. However, if you are like most of us, there have been times when you were correct purely by chance. For example, recently, my little brother came to me with a question about Dragon Ball Z and the time travel in it. As an expert on theories of time travel, I thought this was great. He came up with the idea that there had to be four different timelines in the show, given what he had seen thus far. Explaining that there had to be two different versions of the same character and so forth. As it turns out, he was correct, there did need to be two different versions of that character and there needed to be 4 timelines, but for completely different reasons than the ones he laid out. He later said that it didn't feel like he was correct, something was missing. I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate.
+
+\newglossaryentry{justification}
+{
+name=justification,
+description={The reasons one has to believe something, why they think it is true}
+}
+
 
 Examples like this can be found all over the place, where you were correct, but for totally unexpected reasons. This is why good critical thinkers look deeply at the structure of their justification, how their beliefs relate to each other, which also calls back to one of Socrates' core questions; what is your evidence?
 
-Here is a, relatively, classic example of justification going astray. There have been various thought experiments which follow this line of thought, but I will go with the one which is earliest, as far as I am aware, from Alexius Meinong. Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there? 
+Here is a, relatively, classic example of justification going astray. There have been various thought experiments which follow this line of thought, but I will go with the one which is earliest, as far as I am aware, from Alexius Meinong: 
+
+\factoidbox{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}
 
 For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The reason, as before, is that there was something wrong with the justification. It should be noted that 100\% certainty, no chance of being wrong, is not necessarily required for justification. For example, in a real world case, you can know that your sink isn't leaking without being in the room with the sink. There is a chance you are wrong, given your evidence. Justification can come in degrees and the more justified a belief is, then the more likely it is to be accurate/true. In the violinist example I gave, experience and prior evidence certainly gives ample justification for knowledge in most cases, but you would have had the same evidence if the violinist had been sick and unable to play. This is why good critical thinkers question, doubt, or even reject beliefs if they lack adequate justification.
 
@@ -154,7 +185,14 @@ For this, we see that my beliefs form a pyramid, or tower, like structure, which
 \section{Foundationalism}
 Much of the debate in Epistemology, as I mentioned, centers around justification. There are three dominate theories of justification which we will cover. Doing a little introspection should make it clear that some beliefs are built upon others. One belief is justified by another belief. For example, (and this is a strange system) my belief is that the Earth is actually a dodecahedron is supported (justified) by my beliefs that the middle of two extremes is most likely accurate and when it comes to the shape of the Earth, one extreme says that it is round, and the other says it is flat. Though the beliefs in question are only partially accurate, the middle of two extremes is not always the most accurate, the justification flows in that way. The debate about justification is how the beliefs either need to relate to each other or the sort of cement used to link them together.
 
-The most basic and common stance in Epistemology is Foundationalism. This is the stance that our beliefs, in order to be justified, need to be ultimately justified on the basis of certain, core, foundational beliefs. For example, my belief that the weather-forecast in Washington is unreliable is based on my belief that they have claimed many times that it would be sunny and on my belief that the weather on many of those occasions was, in fact, rainy. My belief about their claims is based on my belief that I remember their statements correctly. My belief about the weather on those occasions is based on my belief that my memory is correct. At the bottom of this structure are the foundational beliefs, which support all of the others. Your beliefs, if foundationalism is correct, can't form a circle of justification. For example, suppose that my belief that Mt. Rainer is an active volcano is supported by my belief that what my teacher in middle school told me was accurate. That belief is supported by the belief that she got accurate knowledge from her schooling and that is further supported by the belief that it's accurate that Mt. Rainer is an active volcano. If we follow the train back, we notice that my belief that Mt. Rainer is an active volcano is, at least indirectly, supported by itself. That should seem strange and the foundationalist wants to exclude cases like that from leading to knowledge.
+The most basic and common stance in Epistemology is \Gls{foundationalism}. This is the stance that our beliefs, in order to be justified, need to be ultimately justified on the basis of certain, core, foundational beliefs. For example, my belief that the weather-forecast in Washington is unreliable is based on my belief that they have claimed many times that it would be sunny and on my belief that the weather on many of those occasions was, in fact, rainy. My belief about their claims is based on my belief that I remember their statements correctly. My belief about the weather on those occasions is based on my belief that my memory is correct. At the bottom of this structure are the foundational beliefs, which support all of the others. Your beliefs, if foundationalism is correct, can't form a circle of justification. For example, suppose that my belief that Mt. Rainer is an active volcano is supported by my belief that what my teacher in middle school told me was accurate. That belief is supported by the belief that she got accurate knowledge from her schooling and that is further supported by the belief that it's accurate that Mt. Rainer is an active volcano. If we follow the train back, we notice that my belief that Mt. Rainer is an active volcano is, at least indirectly, supported by itself. That should seem strange and the foundationalist wants to exclude cases like that from leading to knowledge.
+
+\newglossaryentry{foundationalism}
+{
+name=foundationalism,
+description={The stance in Epistemology concerning justification which states that in order to know something the justification necessary must be structured in such a way as they fundamentally rely on basic, foundational beliefs which are self-evident and do not need further justification. The structure is often compared to a pyramid or a building}
+}
+
 
 Foundational beliefs are your rock bottom, these aren't supported or justified by anything else. If your beliefs are structured in this way and you want to get at knowledge, certainty, then you need to look very closely at the foundational beliefs. These beliefs need to be self-evident, they are not  supported by other beliefs, they need to be strong enough to carry all the weight, all by themselves.  If you have any experience with construction, or Minecraft, this analogy will work nicely for you. The foundationalist thinks of the intellectual structure of knowledge, how the beliefs relate to each other, as a tall building. Buildings can take many different shapes, from tall towers to pyramids, to strange Brutalist architecture, with a small foundation and an expanding roof. But, at the end of the day, the foundation, the concrete slab it's built on, needs to be tough enough to take the weight. 
 
@@ -163,7 +201,16 @@ Finding your foundational beliefs might require a little help, or a highly quest
 Foundational beliefs tend to be very basic logical or experiential truths. For example, something like 'my senses are accurate' or 'if P implies Q and P is true, then Q is true', or that there can't be contradictions. These all can be used to build up a structure of beliefs, which, though possible to be inaccurate, still count as justification.
 
 \section{Infnite Regress Theory}
-The next theory of justification points the finger at the foundational beliefs. For a belief to count as knowledge, according to the foundationalist, need to be built up from basic, foundations, which are self-evident. Those beliefs don't require any further justification. This theory claims that all beliefs need to be justified. It agrees with foundationalism that beliefs can't directly or indirectly support themselves, but it claims that foundational beliefs can't lead to knowledge. For a belief to count as knowledge, according to this theory, it must be justified by some other beliefs, which in turn need to be further justified by others, and those need to be justified by still others, and so on. For you to know something, there would need to be an infinite string of justifying beliefs, never making a circle, which support it. Such an account of justification makes knowledge, frankly, impossible.
+
+The \glspl{infinite regress theory} of justification points the finger at the foundational beliefs. For a belief to count as knowledge, according to the foundationalist, need to be built up from basic, foundations, which are self-evident. Those beliefs don't require any further justification. This theory claims that all beliefs need to be justified. It agrees with foundationalism that beliefs can't directly or indirectly support themselves, but it claims that foundational beliefs can't lead to knowledge. For a belief to count as knowledge, according to this theory, it must be justified by some other beliefs, which in turn need to be further justified by others, and those need to be justified by still others, and so on. For you to know something, there would need to be an infinite string of justifying beliefs, never making a circle, which support it. Such an account of justification makes knowledge, frankly, impossible.
+
+\newglossaryentry{infinite regress theory}
+{
+name=infinite regress theory,
+description={The stance in Epistemology concerning justificaton that all beliefs must be justified, there can be no `foundational' beliefs but also beliefs cannot indirectly justify themselves. The structure is like an infinitely long chain of branching beliefs},
+plural=Infinite Regress Theory
+}
+
 
 Some of you might have heard the phrase 'it's turtles all the way down', which has a humorous story behind it.  This story has changed and mutated quite a bit with time, but it gets the general idea:
 
@@ -172,7 +219,15 @@ Some of you might have heard the phrase 'it's turtles all the way down', which h
 Infinite Regress Theory follows a very similar line of thought. Rather than their being foundational beliefs, in order to have knowledge, there must be beliefs all the way down.  However, having an infinite chain of knowledge doesn't, on its own, give us knowledge. For example, suppose that there's at least 0 soda cans on my desk. Here is a chain of beliefs; if there's at least 2 soda cans on my desk, then there's at least 1; if there are 3 soda cans on my desk then there are at least 2; if there are 4... Continuing for all numbers. None of these beliefs are really justified,  the chain will never reach back to reality and justify my claim that there's no soda cans on my desk. This also means that, if this theory is correct, knowledge is impossible and Global Skepticism is the way to go. 
 
 \section{Coherentism}
-Building off of the previous two, Foundationalism claims that there are bedrock beliefs which don't require further justification, knowledge is justified on the basis of other beliefs (aside from the foundational ones), and beliefs can't directly or indirectly justify themselves to count as knowledge. Infinite Regress Theory claims that there are no foundational beliefs, knowledge must be justified on the basis of further more basic beliefs, and beliefs can't directly or indirectly justify themselves.  Coherentism is like Infinite Regress Theory in that it claims that there are no foundational beliefs in the structure of knowledge, but it rejects that beliefs can't indirectly justify themselves. Beliefs are justified in how they cohere or fit together. It is a sort of back and forth process. Justification can come in two different directions. For Foundationalism and Infinite Regress, it only works in one direction, basic on up. All three agree that seeing many photos of the Earth and, even, going up in a space shuttle would justify the belief that the Earth is round. In such a case, many individual observations build up evidence for a more grand generalized claim. The particular observations give us a basis for the principles. However, sometimes the generalized beliefs can justify our particular evidence. The generalized claims stick around by categorizing or making sense of our observations.
+
+Building off of the previous two, Foundationalism claims that there are bedrock beliefs which don't require further justification, knowledge is justified on the basis of other beliefs (aside from the foundational ones), and beliefs can't directly or indirectly justify themselves to count as knowledge. Infinite Regress Theory claims that there are no foundational beliefs, knowledge must be justified on the basis of further more basic beliefs, and beliefs can't directly or indirectly justify themselves.  \Gls{coherentism} is like Infinite Regress Theory in that it claims that there are no foundational beliefs in the structure of knowledge, but it rejects that beliefs can't indirectly justify themselves. Beliefs are justified in how they cohere or fit together. It is a sort of back and forth process. Justification can come in two different directions. For Foundationalism and Infinite Regress, it only works in one direction, basic on up. All three agree that seeing many photos of the Earth and, even, going up in a space shuttle would justify the belief that the Earth is round. In such a case, many individual observations build up evidence for a more grand generalized claim. The particular observations give us a basis for the principles. However, sometimes the generalized beliefs can justify our particular evidence. The generalized claims stick around by categorizing or making sense of our observations.
+
+\newglossaryentry{coherentism}
+{
+name=coherentism,
+description={The stance in Epistemology concerning justificaton that all beliefs must be justified, there can be no `foundational' beliefs. For this theory, it is necessary that some beliefs indirectly justify themselves. For this theory, beliefs are justified in how they cohere or fit together. The structure is like a spider web or loosely woven fabric}
+}
+
 
 Sometimes, we have cases where some evidence, an observation, just can't fit in the generalization. Sometimes, the evidence disproves our generalization. For example, suppose that after years of bird watching in states aside from Washington and seeing thousands of ravens, I generalize to the belief that all ravens are black. But, one day, while bird-watching in Washington, I spot two white ravens (yes, there is a beach in Washington with a family of white ravens). This will clearly conflict with my core belief that all ravens are black, but that's OK. After confirming that those are in fact ravens and doing my due diligence, I amend my belief to something like "most ravens are black."
 
